Remove legacy export lists from pom.xml